<resources>
    <string name="app_name">Taskie</string>
    <string name="newTask_title_hint">Enter title</string>
    <string name="newTask_description_hint">Enter description</string>
    <string name="edittext_newtask_duedate">Set up due date</string>
    <string name="title_activity_list_options_menu">ListOptionsMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="filter_show">filter</string>
    <string name="high_priority_first">High priority first</string>
    <string name="low_priority_first">Low priority first</string>
    <string name="uncompleted">uncompleted</string>
    <string name="all">all</string>
    <string name="newtask_category_hint">Enter or choose a category</string>
    <string name="delete">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="register_here">Register here</string>
    <string name="save">SAVE</string>
</resources>
