<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort"
        app:showAsAction= "never"
        android:id="@+id/sort_option">
        <menu>
            <item
                android:id="@+id/highPriority_first_sort"
                app:showAsAction="never"
                android:title="@string/high_priority_first"
                />
            <item
                android:id="@+id/lowPriority_first_sort"
                app:showAsAction="never"
                android:title="@string/low_priority_first"/>
        </menu>
    </item>

    <item android:title="@string/filter_show"
        app:showAsAction="never"
        android:id="@+id/filter_option">
        <menu>
            <item
                android:id="@+id/uncompleted_filter"
                android:title="@string/uncompleted"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/all_filter"
                android:title="@string/all"
                app:showAsAction="never"

            />
        </menu>
    </item>
</menu>