<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:alpha="0.55"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/user_email"
            style="@style/userInfoEditText"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/user_password"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            style="@style/userInfoEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/transparent_white_color"
            android:layout_marginTop="50dp"
            android:background="@color/purple_theme_color"
            android:fontFamily="@font/artifika"
            android:text="@string/login" />

        <TextView
            android:id="@+id/registration_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center"
            android:textColor="#751c66"
            android:fontFamily="@font/artifika"
            android:text="@string/register_here" />



    </LinearLayout>

</android.support.constraint.ConstraintLayout>