<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:alpha="0.55"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/artifika"
            android:text="WELCOME"
            android:textColor="@color/transparent_white_color"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/username"
            style="@style/userInfoEditText"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/username" />


        <EditText
            android:id="@+id/user_email"
            style="@style/userInfoEditText"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/user_password"
            style="@style/userInfoEditText"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/purple_theme_color"
            android:text="@string/register"
            android:textColor="@color/transparent_white_color" />

        <TextView
            android:id="@+id/login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:fontFamily="@font/artifika"
            android:text="Already registred? Login here"
            android:textColor="#fff" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>