<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundtasksblur">

    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_normal"
        android:fontFamily="@font/artifika"
        android:background="@color/transparent_white_color"
        android:hint="@string/newTask_title_hint"/>


    <EditText
        android:id="@+id/edittext_newtask_description"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:fontFamily="@font/artifika"
        android:background="@color/transparent_white_color"
        android:layout_height="100dp"
        android:layout_below="@id/edittext_newtask_title"
        android:gravity="top"
        android:hint="@string/newTask_description_hint"/>

    <LinearLayout
        android:id="@+id/linearlayout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/edittext_newtask_description"
        >

        <EditText
            android:id="@+id/edittext_newtask_dueDate"
            android:layout_below="@+id/edittext_newtask_description"
            android:layout_width="0dp"
            android:fontFamily="@font/artifika"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_newtask_duedate"
            />

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/edittext_newtask_dueDate"
            android:background="@drawable/calendar_icon"/>
    </LinearLayout>


    <AutoCompleteTextView
        android:id="@+id/category_autoCompletedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:layout_margin="10dp"
        android:hint="@string/newtask_category_hint"
        android:layout_below="@+id/linearlayout_date"
        />

    <ImageView
        android:id="@+id/category_dropdown_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/category_autoCompletedTextView"
        android:layout_alignTop="@+id/category_autoCompletedTextView"
        android:src="@drawable/drop_down_icon"
        />


<LinearLayout
    android:id="@+id/linearlayout_spinner"
    android:layout_width="300dp"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/category_autoCompletedTextView"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/artifika"
        android:textSize="@dimen/textSize_normal"
        android:textColor="@color/purple_theme_color"
        android:text="PRIORITY:"
        />

    <Spinner
        android:id="@+id/spinner_newtask_priority"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_autoCompletedTextView"
        android:layout_centerHorizontal="true"/>

</LinearLayout>

    <Button
        android:id="@+id/imagebutton_newtask_savetask"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_spinner"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/textSize_large"
        android:textColor="@color/transparent_white_color"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:background="@color/gray"
        android:fontFamily="@font/artifika"/>

</RelativeLayout>